# rekruto-test

./: README.md  env_sample  pyproject.toml
src/: manage.py
src/apps/hello/: views.py
src/apps/hello/static/css/: styles.css
src/apps/hello/templates/hello/: base.html
src/rekruto/: asgi.py  settings.py  urls.py  wsgi.py
